test/invalid/subscript_assign_nonlist.py
# Subscript assignment on non-list type
def main() -> None:
    x: int = 5
    x[0] = 1
    print(x)
